--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Animesh Rawat - Portfolio",
-  "short_name": "Animesh Rawat",
+  "name":"Titiloye Paul - Portfolio",
+  "short_name": "Titiloye Paul",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#fff",
